Refs #140559 - Fix search hints not visible issue.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -68,7 +68,7 @@ div#page-document {
       border-bottom: none;
 
       div.cols-container {
-        overflow: auto;
+        min-height: 230px;
 
         div.col-left {
           width: 16.66666667%;
